# decky-romm-client

./: .gitignore  README.md  decky.pyi  main.py  package.json  plugin.json  pnpm-lock.yaml  vitest.config.ts
rom-m-api-client/: .gitignore  README.md  pyproject.toml  romm-client.py
rom-m-api-client/rom_m_api_client/: __init__.py
rom-m-api-client/rom_m_api_client/models/: __init__.py  add_firmware_response.py  body_add_collection_api_collections_post.py  body_add_firmware_api_firmware_post.py  body_add_platform_api_platforms_post.py  body_add_user_api_users_post.py  body_create_user_from_invite_api_users_register_post.py  body_delete_firmware_api_firmware_delete_post.py  body_delete_roms_api_roms_delete_post.py  body_delete_saves_api_saves_delete_post.py  body_delete_states_api_states_delete_post.py  body_refresh_retro_achievements_api_users_id_ra_refresh_post.py  body_request_password_reset_api_forgot_password_post.py  body_reset_password_api_reset_password_post.py  body_token_api_token_post.py  body_update_collection_api_collections_id_put.py  body_update_platform_api_platforms_id_put.py  body_update_rom_api_roms_id_put.py  body_update_rom_user_api_roms_id_props_put.py  bulk_operation_response.py  cleanup_stats.py  cleanup_task_meta.py  cleanup_task_status_response.py  collection_schema.py  config_response.py  config_response_ejs_controls.py  config_response_ejs_settings.py  config_response_ejs_settings_additional_property.py  config_response_platforms_binding.py  conversion_stats.py  (+96 more)
rom-m-api-client/tests/: conftest.py  test_extract_zip.py  test_romm_client.py
(+111 files in other folders)
